[package]
name = "neon"
version = "0.1.1"
authors = ["Dima Chernyshev <dimcher@gmail.com>"]
license = "MIT"
build = "build.rs"
edition = "2018"
exclude = ["artifacts.json", "index.node"]

[lib]
name = "neon"
crate-type = ["cdylib"]

[build-dependencies]
neon-build = "0.10.0"

[dependencies]
neon = "0.10.0"
regex = "1.5.5"
